[gd_scene load_steps=7 format=3 uid="uid://m8oif6vgxa3n"]

[ext_resource type="Script" path="res://Scripts/Tower_scripts/traps.gd" id="1_ku5pr"]
[ext_resource type="Texture2D" uid="uid://braevo02p1521" path="res://Assets/Traps/spikes0.png" id="1_qbrn2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n024p"]
size = Vector2(57, 58)

[sub_resource type="Animation" id="Animation_24b1r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spikes0:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_kjjgw"]
resource_name = "damage"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spikes0:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -7), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e4kwp"]
_data = {
"RESET": SubResource("Animation_24b1r"),
"damage": SubResource("Animation_kjjgw")
}

[node name="SpikeTrap" type="Area2D"]
position = Vector2(90, 55)
collision_layer = 8
collision_mask = 8
monitorable = false
script = ExtResource("1_ku5pr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(0.914, 1)
shape = SubResource("RectangleShape2D_n024p")

[node name="Spikes0" type="Sprite2D" parent="."]
texture = ExtResource("1_qbrn2")

[node name="Label" type="Label" parent="."]
offset_left = -18.0
offset_top = -8.0
offset_right = 22.0
offset_bottom = 12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e4kwp")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
